--- a/exo102/WebContent/css/auth.css
+++ b/exo102/WebContent/css/auth.css
@@ -1,10 +1,10 @@
 body {
   padding-top: 40px;
   padding-bottom: 40px;
-  background-color: #eee;
+  background-color: #9fa5c9;
 }
 
-.form-signin {
+.form-signin{
   max-width: 330px;
   padding: 15px;
   margin: 0 auto;
