--- a/exo102/WebContent/css/auth.css
+++ b/exo102/WebContent/css/auth.css
@@ -1,7 +1,7 @@
 body {
   padding-top: 40px;
   padding-bottom: 40px;
-  background-color: #9fa5c9;
+  background-color: #ffffff;
 }
 
 .form-signin{
